// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStatusChoiceGroup render 1`] = `
<ChoiceGroupPassFail
  componentRef={[Function]}
  isLabelVisible={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "PASS",
        "text": "Pass",
      },
      Object {
        "key": "FAIL",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={null}
  selectedKey="PASS"
/>
`;

exports[`TestStatusChoiceGroup render: selectedKey is not set to undefined as status is PASS 1`] = `
<ChoiceGroupPassFail
  componentRef={[Function]}
  isLabelVisible={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "PASS",
        "text": "Pass",
      },
      Object {
        "key": "FAIL",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={null}
  selectedKey="PASS"
/>
`;

exports[`TestStatusChoiceGroup render: selectedKey is set to UNKNOWN as status is UNKNOWN 1`] = `
<ChoiceGroupPassFail
  componentRef={[Function]}
  isLabelVisible={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "key": "PASS",
        "text": "Pass",
      },
      Object {
        "key": "FAIL",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={null}
  selectedKey="UNKNOWN"
/>
`;
